--- a/LabMob/android/app/src/main/AndroidManifest.xml
+++ b/LabMob/android/app/src/main/AndroidManifest.xml
@@ -33,9 +33,15 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths"></meta-data>
         </provider>
+      <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyCBIR0J-OcK2q_QxzsrzB73PlYucVopYz0"/>
     </application>
 
     <!-- Permissions -->
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
 </manifest>
