--- a/LabMob/android/app/src/main/AndroidManifest.xml
+++ b/LabMob/android/app/src/main/AndroidManifest.xml
@@ -34,6 +34,10 @@
                 android:resource="@xml/file_paths"></meta-data>
         </provider>
       <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyCBIR0J-OcK2q_QxzsrzB73PlYucVopYz0"/>
+      <service
+        android:name=".ForegroundService"
+        android:enabled="true"
+        android:exported="false" />
     </application>
 
     <!-- Permissions -->
@@ -45,7 +49,9 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-  <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
 
 
