--- a/LabMob/android/app/capacitor.build.gradle
+++ b/LabMob/android/app/capacitor.build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation project(':capacitor-local-notifications')
     implementation project(':capacitor-push-notifications')
     implementation project(':capacitor-status-bar')
+    implementation project(':background-runner-plugin')
 
 }
 
