--- a/LabMob/android/capacitor.settings.gradle
+++ b/LabMob/android/capacitor.settings.gradle
@@ -31,3 +31,6 @@ project(':capacitor-push-notifications').projectDir = new File('../node_modules/
 
 include ':capacitor-status-bar'
 project(':capacitor-status-bar').projectDir = new File('../node_modules/@capacitor/status-bar/android')
+
+include ':background-runner-plugin'
+project(':background-runner-plugin').projectDir = new File('../background-runner-plugin/android')
