--- a/LabMob/package.json
+++ b/LabMob/package.json
@@ -35,6 +35,7 @@
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
+    "background-runner-plugin": "file:background-runner-plugin",
     "firebase": "^10.14.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
