--- a/LabMob/package.json
+++ b/LabMob/package.json
@@ -21,21 +21,24 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "@awesome-cordova-plugins/device-motion": "^6.9.0",
     "@capacitor-firebase/app": "^6.1.0",
     "@capacitor/android": "^6.1.2",
     "@capacitor/app": "6.0.1",
     "@capacitor/background-runner": "^2.0.0",
-    "@capacitor/core": "6.1.2",
+    "@capacitor/core": "^6.1.2",
     "@capacitor/geolocation": "^6.0.1",
     "@capacitor/google-maps": "^6.0.1",
     "@capacitor/haptics": "6.0.1",
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/local-notifications": "^6.1.0",
+    "@capacitor/motion": "^6.0.1",
     "@capacitor/push-notifications": "^6.0.2",
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "background-runner-plugin": "file:background-runner-plugin",
+    "cordova-plugin-pedometer": "^0.4.1",
     "firebase": "^10.14.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
@@ -52,7 +55,7 @@
     "@angular/cli": "^18.0.0",
     "@angular/compiler-cli": "^18.0.0",
     "@angular/language-service": "^18.0.0",
-    "@capacitor/cli": "6.1.2",
+    "@capacitor/cli": "^6.1.2",
     "@ionic/angular-toolkit": "^11.0.1",
     "@types/google.maps": "^3.58.1",
     "@types/jasmine": "~5.1.0",
