Login Google -- Sistemato bug, funziona solo per web, fare per android

--- a/LabMob/android/app/capacitor.build.gradle
+++ b/LabMob/android/app/capacitor.build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation project(':capacitor-firebase-app')
     implementation project(':capacitor-app')
     implementation project(':capacitor-background-runner')
+    implementation project(':capacitor-device')
     implementation project(':capacitor-geolocation')
     implementation project(':capacitor-google-maps')
     implementation project(':capacitor-haptics')
