--- a/LabMob/package.json
+++ b/LabMob/package.json
@@ -28,6 +28,7 @@
     "@capacitor/app": "6.0.1",
     "@capacitor/background-runner": "^2.0.0",
     "@capacitor/core": "^6.1.2",
+    "@capacitor/device": "^6.0.1",
     "@capacitor/geolocation": "^6.0.1",
     "@capacitor/google-maps": "^6.0.1",
     "@capacitor/haptics": "6.0.1",
