--- a/LabMob/package.json
+++ b/LabMob/package.json
@@ -40,10 +40,13 @@
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "background-runner-plugin": "file:background-runner-plugin",
+    "chart.js": "^4.4.5",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "cordova-plugin-pedometer": "^0.4.1",
     "firebase": "^10.14.1",
     "firebase-admin": "^12.6.0",
     "ionicons": "^7.0.0",
+    "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
