--- a/LabMob/package.json
+++ b/LabMob/package.json
@@ -25,7 +25,7 @@
     "@awesome-cordova-plugins/device-motion": "^6.9.0",
     "@capacitor-firebase/app": "^6.1.0",
     "@capacitor/android": "^6.1.2",
-    "@capacitor/app": "6.0.1",
+    "@capacitor/app": "^6.0.1",
     "@capacitor/background-runner": "^2.0.0",
     "@capacitor/core": "^6.1.2",
     "@capacitor/device": "^6.0.1",
