--- a/LabMob/package.json
+++ b/LabMob/package.json
@@ -40,7 +40,7 @@
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
     "background-runner-plugin": "file:background-runner-plugin",
-    "chart.js": "^4.4.5",
+    "chart.js": "^4.4.6",
     "chartjs-plugin-datalabels": "^2.2.0",
     "cordova-plugin-pedometer": "^0.4.1",
     "firebase": "^10.14.1",
@@ -63,6 +63,7 @@
     "@angular/language-service": "^18.0.0",
     "@capacitor/cli": "^6.1.2",
     "@ionic/angular-toolkit": "^11.0.1",
+    "@types/chart.js": "^2.9.41",
     "@types/google.maps": "^3.58.1",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
