--- a/LabMob/android/app/src/main/AndroidManifest.xml
+++ b/LabMob/android/app/src/main/AndroidManifest.xml
@@ -57,4 +57,5 @@
   <uses-permission android:name="android.permission.VIBRATE"/>
   <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
   <uses-permission android:name="android.permission.WAKE_LOCK" />
+  <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
 </manifest>
