--- a/LabMob/package.json
+++ b/LabMob/package.json
@@ -42,12 +42,14 @@
     "background-runner-plugin": "file:background-runner-plugin",
     "chart.js": "^4.4.6",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "cordova-plugin-background-mode": "^0.7.3",
+    "cordova-plugin-device": "^3.0.0",
     "cordova-plugin-pedometer": "^0.4.1",
     "firebase": "^10.14.1",
     "firebase-admin": "^12.6.0",
     "ionicons": "^7.0.0",
     "ng2-charts": "^6.0.1",
-    "rxjs": "~7.8.0",
+    "rxjs": "^6.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
